<resources>
    <string name="app_name">ASAD3 Mobile Application</string>
    <string name="label_name">Name</string>
    <string name="label_sex">Sex</string>
    <string name="label_age">Age</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="label_bmi">BMI</string>
    <string name="label_neck">Neck Width</string>
    <string name="sleep_snore">Do you snore during sleep?</string>

    <string name="drive_and_sleep">Have you ever fallen asleep while driving?</string>
    <string name="sleepiness">Rate your tiredness and sleepiness between 1(Low) to 5(High)</string>
    <string name="hour_per_sleep">How many hours do you normally sleep per night?</string>
    <string name="smoke_history">Do you have a history of smoking?</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_next">Disconnect</string>
    <string name="menu_prev">Stop</string>
    <string name="ble_not_supported">BLE is not supported</string>
</resources>
