<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<include-->
        <!--layout="@layout/set_up_bar"-->
        <!--android:title="Setting Up"-->
        <!--android:id="@+id/set_up_1">-->

    <!--</include>-->


    <EditText
        android:id="@+id/f_name"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <EditText
        android:id="@+id/age"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/age_label"
        app:layout_constraintStart_toEndOf="@+id/age_label"
        app:layout_constraintTop_toTopOf="@+id/age_label" />

    <EditText
        android:id="@+id/neck"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/neck_c"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/neck_c"
        app:layout_constraintTop_toTopOf="@+id/neck_c" />

    <EditText
        android:id="@+id/BMI"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/BMI_label"
        app:layout_constraintStart_toEndOf="@+id/BMI_label"
        app:layout_constraintTop_toTopOf="@+id/BMI_label" />

    <Spinner
        android:id="@+id/Gender"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/sex"
        app:layout_constraintStart_toEndOf="@+id/sex"
        app:layout_constraintTop_toTopOf="@+id/sex" />

    <TextView
        android:id="@+id/BMI_label"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="110dp"
        android:text="@string/label_bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neck_c"
        tools:text="@string/label_bmi" />

    <TextView
        android:id="@+id/neck_c"
        android:layout_width="98dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/label_neck"
        app:layout_constraintBottom_toTopOf="@+id/BMI_label"
        app:layout_constraintEnd_toStartOf="@+id/neck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_label"
        tools:text="@string/label_neck" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/label_age"
        app:layout_constraintBottom_toTopOf="@+id/neck_c"
        app:layout_constraintEnd_toStartOf="@+id/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex"
        tools:text="@string/label_age" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/label_sex"
        app:layout_constraintBottom_toTopOf="@+id/age_label"
        app:layout_constraintEnd_toStartOf="@+id/Gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/label_sex" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="Last Name"
        app:layout_constraintBottom_toTopOf="@+id/sex"
        app:layout_constraintEnd_toStartOf="@+id/l_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:text="First Name "
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/to_feat1"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="to_feat1"
        android:text="next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/l_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="cm"
        app:layout_constraintBottom_toBottomOf="@+id/neck"
        app:layout_constraintStart_toEndOf="@+id/neck"
        app:layout_constraintTop_toTopOf="@+id/neck" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


